--- a/build.gradle
+++ b/build.gradle
@@ -15,21 +15,24 @@ targetCompatibility = 1.8
 mainClassName = 'edu.mcw.rgd.PerpetuateNomenclature2Strain'
 String myAppName = 'perpetuateNomenclature2Strain'
 
+project.archivesBaseName = myAppName
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     compile 'commons-dbcp:commons-dbcp:1.4'
-    compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.7.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.7.RELEASE'
+    compile 'org.apache.logging.log4j:log4j-api:2.17.1'
+    compile 'org.apache.logging.log4j:log4j-core:2.17.1'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.6.0.0'
+    compile 'org.springframework:spring-beans:5.1.8.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.1.8.RELEASE'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
 
 jar {
-    baseName = myAppName
     manifest {
         attributes(
             'Built-By': System.getProperty('user.name'),
