--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.9.0'
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.20.0.0'
-    implementation 'org.springframework:spring-beans:6.0.12'
-    implementation 'org.springframework:spring-jdbc:6.0.12'
+    implementation ('org.apache.commons:commons-dbcp2:2.10.0') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    implementation 'org.apache.logging.log4j:log4j-core:2.21.0'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
+    implementation 'org.springframework:spring-jdbc:6.0.13'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
